--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,11 +80,9 @@
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/register"
-        android:textAllCaps="false"
         android:textSize="16sp"
         app:backgroundTint="@android:color/transparent"
         android:textColor="?attr/colorPrimary"
@@ -97,19 +95,19 @@
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="152dp"
+        android:layout_marginHorizontal="16dp"
         android:text="@string/login"
-        android:textAllCaps="false"
-        android:textColor="?attr/colorOnPrimary"
         android:textSize="16sp"
+        android:textColor="?attr/colorOnPrimary"
         app:backgroundTint="?attr/colorPrimary"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilPassword"
-        app:layout_constraintVertical_bias="1" />
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
