--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -198,11 +198,9 @@
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/already_have_account"
-        android:textAllCaps="false"
         android:textSize="16sp"
         app:backgroundTint="@android:color/transparent"
         android:textColor="?attr/colorPrimary"
@@ -215,19 +213,15 @@
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginHorizontal="16dp"
         android:text="@string/register"
-        android:textAllCaps="false"
-        android:textColor="?attr/colorOnPrimary"
         android:textSize="16sp"
+        android:textColor="?attr/colorOnPrimary"
         app:backgroundTint="?attr/colorPrimary"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputSection"
-        app:layout_constraintVertical_bias="1" />
+        app:layout_constraintTop_toBottomOf="@+id/inputSection" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
