--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.Moviecatalog" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Moviecatalog" parent="Base.Theme.Moviecatalog">
         <item name="colorPrimary">@color/primaryDark</item>
         <item name="colorOnPrimary">@color/onPrimaryDark</item>
         <item name="android:colorBackground">@color/backgroundDark</item>
@@ -7,6 +7,9 @@
 
         <item name="colorSurface">@color/surfaceDark</item>
         <item name="colorOnSurface">@color/onSurfaceDark</item>
+
+        <item name="colorError">@color/errorDark</item>
+        <item name="colorOnError">@color/onErrorDark</item>
 
         <item name="android:statusBarColor" >@color/primaryDark</item>
         <item name="android:windowLightStatusBar" >true</item>
