--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="onBackgroundDark">#FFFFFF</color>
     <color name="surfaceDark">#1C1A19</color>
     <color name="onSurfaceDark">#B7B7B7</color>
+    <color name="errorDark">#E91E47</color>
+    <color name="onErrorDark">#292828</color>
 
     <color name="primaryLight">#EF3A01</color>
     <color name="onPrimaryLight">#FFFFFF</color>
@@ -16,4 +18,6 @@
     <color name="onBackgroundLight">#150D0B</color>
     <color name="surfaceLight">#B7B7B7</color>
     <color name="onSurfaceLight">#1C1A19</color>
+    <color name="errorLight">#EA0F0F</color>
+    <color name="onErrorLight">#EDE1E1</color>
 </resources>
