--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,26 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-<!--    android:background="?attr/andorid:colorBackground"-->
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
+        android:background="?attr/android:colorBackground"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true" />
 
-<!--    android:visibility="gone" TODO("set navbar invisible")-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.BottomNavigationView"
+        app:itemRippleColor="@android:color/transparent"
         android:layout_gravity="bottom"
+        android:visibility="gone"
+        app:itemGravity="center"
+        android:backgroundTint="?attr/colorSurface"
+        app:itemIconTint="@color/bottom_nav_icon_color"
+        app:itemTextColor="@color/bottom_nav_text_color"
         app:menu="@menu/bottom_nav_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
