--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,11 +21,11 @@
 
         <ImageView
             android:id="@+id/avatar"
-            android:layout_width="88dp"
-            android:layout_height="88dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/description_movie_catalog_logo"
-            android:src="@drawable/icon_login"
+            android:src="@drawable/pic_profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,6 @@
             android:maxLines="1"
             android:paddingVertical="8dp"
             android:singleLine="true"
-            android:text="Test"
             android:textAlignment="textStart"
             android:textColor="?attr/colorOnBackground"
             android:textSize="24sp"
@@ -49,34 +48,109 @@
 
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilEmail"
+    <TextView
+        android:id="@+id/tvEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="48dp"
-        android:paddingHorizontal="16dp"
-        app:errorEnabled="true"
-        app:boxCornerRadiusTopStart="@dimen/medium"
-        app:boxCornerRadiusTopEnd="@dimen/medium"
-        app:boxCornerRadiusBottomStart="@dimen/medium"
-        app:boxCornerRadiusBottomEnd="@dimen/medium"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="@string/hint_email"
+        android:textAlignment="textStart"
+        android:textColor="?attr/colorOnSurface"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerSection">
+        app:layout_constraintTop_toBottomOf="@+id/headerSection" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etUsername"
-            android:textSize="14sp"
-            android:textColor="?attr/colorOnSurface"
-            app:boxStrokeColor="?attr/colorOnSurface"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_login"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true" />
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:textAlignment="textStart"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="16sp"
+        android:background="@drawable/tv_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="@string/hint_name"
+        android:textAlignment="textStart"
+        android:textColor="?attr/colorOnSurface"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:textAlignment="textStart"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="16sp"
+        android:background="@drawable/tv_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvError"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="16dp"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textColor="?attr/colorError"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/space"
+        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/logOutButton"
