--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,12 +9,12 @@
     tools:context=".features.profile.ProfileFragment">
 
     <LinearLayout
-        android:id="@+id/headerSection"
+        android:id="@+id/header_section"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toTopOf="@id/email_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,134 +26,160 @@
             android:layout_weight="1"
             android:contentDescription="@string/description_movie_catalog_logo"
             android:src="@drawable/pic_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
         <TextView
-            android:id="@+id/tvUsername"
+            android:id="@+id/username_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             android:layout_weight="3"
             android:maxLines="1"
-            android:paddingVertical="8dp"
             android:singleLine="true"
+            android:paddingVertical="8dp"
             android:textAlignment="textStart"
             android:textColor="?attr/colorOnBackground"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvEmail"
+        android:id="@+id/email_tv"
+        style="@style/ProfileCaption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:maxLines="1"
-        android:singleLine="true"
         android:text="@string/hint_email"
-        android:textAlignment="textStart"
-        android:textColor="?attr/colorOnSurface"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerSection" />
+        app:layout_constraintTop_toBottomOf="@+id/header_section" />
 
     <TextView
         android:id="@+id/email"
+        style="@style/ProfileInfoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="12dp"
-        android:textAlignment="textStart"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="16sp"
-        android:background="@drawable/tv_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/email_tv" />
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/name_tv"
+        style="@style/ProfileCaption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:maxLines="1"
-        android:singleLine="true"
         android:text="@string/hint_name"
-        android:textAlignment="textStart"
-        android:textColor="?attr/colorOnSurface"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <TextView
         android:id="@+id/name"
+        style="@style/ProfileInfoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="12dp"
-        android:textAlignment="textStart"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="16sp"
-        android:background="@drawable/tv_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        app:layout_constraintTop_toBottomOf="@+id/name_tv" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
-    <Space
-        android:id="@+id/space"
+    <TextView
+        android:id="@+id/birth_date_tv"
+        style="@style/ProfileCaption"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvError"
+        android:layout_height="wrap_content"
+        android:text="@string/hint_date_of_birth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <TextView
-        android:id="@+id/tvError"
+        android:id="@+id/birth_date"
+        style="@style/ProfileInfoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textAlignment="center"
-        android:textColor="?attr/colorError"
-        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/birth_date_tv" />
+
+    <TextView
+        android:id="@+id/gender_tv"
+        style="@style/ProfileCaption"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/hint_gender"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/birth_date" />
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/gender_toggle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        android:enabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gender_tv">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/male_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/male"
+            android:textColor="@color/toggle_gender_text"
+            app:cornerRadius="@dimen/medium"
+            app:strokeColor="?attr/colorOnSurface"
+            app:strokeWidth="1dp"
+            android:backgroundTint="@color/toggle_gender" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/female_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:strokeColor="?attr/colorOnSurface"
+            app:strokeWidth="1dp"
+            android:text="@string/female"
+            android:textColor="@color/toggle_gender_text"
+            app:cornerRadius="@dimen/medium"
+            android:backgroundTint="@color/toggle_gender" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@style/Progress"
+        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gender_toggle" />
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/error"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gender_toggle" />
+
+    <TextView
+        android:id="@+id/error"
+        style="@style/Error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/space"
-        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
+        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/logOutButton"
+        android:id="@+id/logout_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
