--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,15 +15,32 @@
         android:contentDescription="@string/description_movie_catalog_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:text="@string/register"
+        android:textSize="32sp"
+        android:textColor="?attr/colorPrimary"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintBottom_toTopOf="@+id/input_section"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ScrollView
-        android:id="@+id/inputSection"
+        android:id="@+id/input_section"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
+        android:layout_marginHorizontal="16dp"
+        android:paddingTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintBottom_toTopOf="@+id/error"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -31,91 +48,77 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="48dp">
+            android:divider="@drawable/divider_register"
+            android:showDividers="middle">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/username"
+                android:id="@+id/username_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etUsername"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/username_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_login"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilEmail"
+                android:id="@+id/email_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etEmail"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/email_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_email"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:inputType="textEmailAddress"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilName"
+                android:id="@+id/name_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etName"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/name_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_name"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilPassword"
+                android:id="@+id/password_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
@@ -123,26 +126,22 @@
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etPassword"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/password_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_password"
                     android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilRepeatPassword"
+                android:id="@+id/repeat_password_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
@@ -150,26 +149,22 @@
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etRepeatPassword"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/repeat_password_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_password_repeat"
                     android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilBirthDate"
+                android:id="@+id/birth_date_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="16dp"
-                app:errorEnabled="true"
                 app:boxCornerRadiusTopStart="@dimen/medium"
                 app:boxCornerRadiusTopEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
@@ -178,39 +173,76 @@
                 app:endIconDrawable="@drawable/icon_calendar">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etBirthDate"
-                    android:textSize="14sp"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
+                    android:id="@+id/birth_date_et"
+                    style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_date_of_birth"
                     android:focusable="false"
                     android:clickable="true"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/gender_toggle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:singleSelection="true"
+                app:selectionRequired="true">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/male_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/male"
+                    android:textColor="@color/toggle_gender_text"
+                    app:cornerRadius="@dimen/medium"
+                    app:strokeColor="?attr/colorOnSurface"
+                    app:strokeWidth="1dp"
+                    android:backgroundTint="@color/toggle_gender" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/female_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:strokeColor="?attr/colorOnSurface"
+                    app:strokeWidth="1dp"
+                    android:text="@string/female"
+                    android:textColor="@color/toggle_gender_text"
+                    app:cornerRadius="@dimen/medium"
+                    android:backgroundTint="@color/toggle_gender" />
+
+            </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnLogin"
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@style/Progress"
+        app:layout_constraintBottom_toBottomOf="@+id/input_section"
+        app:layout_constraintEnd_toEndOf="@+id/input_section"
+        app:layout_constraintStart_toStartOf="@+id/input_section"
+        app:layout_constraintTop_toTopOf="@+id/input_section" />
+
+    <TextView
+        android:id="@+id/error"
+        style="@style/Error"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp"
-        android:text="@string/already_have_account"
-        android:textSize="16sp"
-        app:backgroundTint="@android:color/transparent"
-        android:textColor="?attr/colorPrimary"
-        app:cornerRadius="@dimen/medium"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/input_section"
+        app:layout_constraintBottom_toTopOf="@+id/register_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRegister"
+        android:id="@+id/register_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -219,9 +251,25 @@
         android:textColor="?attr/colorOnPrimary"
         app:backgroundTint="?attr/colorPrimary"
         app:cornerRadius="@dimen/medium"
-        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputSection" />
+        app:layout_constraintTop_toBottomOf="@+id/error" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/login_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/already_have_account"
+        android:textSize="16sp"
+        android:textColor="?attr/colorPrimary"
+        app:backgroundTint="@android:color/transparent"
+        app:cornerRadius="@dimen/medium"
+        app:layout_constraintTop_toBottomOf="@id/register_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
