--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="DefaultEditText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
 
+    <style name="Error">
+        <item name="android:maxLines">2</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?attr/colorError</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="Progress">
+        <item name="android:visibility">gone</item>
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:color">?attr/colorPrimary</item>
+    </style>
+
+    <style name="ProfileCaption">
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+    </style>
+
+    <style name="ProfileInfoText">
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:paddingVertical">12dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@drawable/tv_border</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+    </style>
 </resources>
