--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -246,10 +246,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/register"
         android:textSize="16sp"
-        android:textColor="?attr/colorOnPrimary"
-        app:backgroundTint="?attr/colorPrimary"
+        android:textColor="@color/active_button_text"
+        app:backgroundTint="@color/active_button"
+        app:strokeColor="@color/active_button_border"
+        app:strokeWidth="1dp"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
         app:layout_constraintEnd_toEndOf="parent"
