feature: completed authorization

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -181,7 +181,7 @@
                     app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_date_of_birth"
                     android:focusable="false"
-                    android:clickable="true"
+                    android:cursorVisible="false"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
